test: 테스트 추가 및 기존 테스트 리팩토링 (단위 & 통합 테스트)